--- a/contact.html
+++ b/contact.html
@@ -86,7 +86,7 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="project.html" class="nav-item nav-link">Projects</a>
-                            <a href="Odder.html" class="nav-item nav-link">Rent Now</a>
+                            <a href="odder.html" class="nav-item nav-link">Rent Now</a>
 
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Pages</a>
@@ -163,7 +163,7 @@
                                     <a class="px-2" href="tel:+27 76 066 9326"><i class="fab fa-whatsapp text-dark"></i></a>
                                     <a class="px-2" href="#"><i class="fab fa-instagram text-dark"></i></a>
                                     <a class="px-2" href="#"><i class="fab fa-linkedin-in text-dark"></i></a>
-                                    <a class="px-2" href="#"><i class="fab fa-youtube text-dark"></i></a>
+                                    <a class="px-2" href="https://www.youtube.com/@mlungisimbambo1700"><i class="fab fa-youtube text-dark"></i></a>
                                 </div>
                             </div>
                         </div>
