--- a/odder.html
+++ b/odder.html
@@ -79,7 +79,8 @@
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <a href="service.html" class="nav-item nav-link">Services</a>
                             <a href="project.html" class="nav-item nav-link">Projects</a>
-                            <a href="Odder.html" class="nav-item nav-link">Rent Now</a>
+                            <a href="odder.html" class="nav-item nav-link">Rent Now</a>
+                            
                             <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle active" data-bs-toggle="dropdown">Pages</a>
                                 <div class="dropdown-menu m-0 bg-primary">
