--- a/odder.html
+++ b/odder.html
@@ -319,7 +319,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-4 text-center text-md-start mb-3 mb-md-0">
-                    <a href="#" class="text-primary mb-0 display-6">Mbambo<span class="text-white">Rentals</span></a>
+                    <a href="flower.html" class="text-primary mb-0 display-6">Mbambo<span class="text-white">Rentals</span></a>
                 </div>
                 <div class="col-md-4 copyright-btn text-center text-md-start mb-3 mb-md-0 flex-shrink-0">
                     <a class="btn btn-primary rounded-circle me-3 copyright-icon" href=""><i class="fab fa-twitter"></i></a>
